# honda_generator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  README.md  SERVICE_SCHEDULE.md  __init__.py  api.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  pyproject.toml  ruff.toml  run_tests.py
.github/workflows/: ci.yml
custom_components/honda_generator/: __init__.py  api.py  binary_sensor.py  button.py  codes.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/honda_generator/translations/: cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sv.json  tr.json  uk.json  zh-Hans.json  zh-Hant.json
docs/: initial_setup_design.md
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_codes.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_sensor.py  test_services.py  test_switch.py
tools/: honda_power.py
translations/: en.json
